--- a/index.html
+++ b/index.html
@@ -43,6 +43,142 @@
             </div>
         </section>
 
+
+<section id="pricing" class="py-20 bg-gradient-to-br from-gray-50 to-gray-100">
+  <div class="container mx-auto px-6">
+    <h2 class="text-4xl font-bold text-center mb-16 bg-clip-text text-transparent bg-gradient-to-r from-purple-600 to-blue-500">
+      Choose Your Plan
+    </h2>
+    <div class="flex flex-col lg:flex-row gap-8 justify-center items-stretch">
+      <div class="bg-white rounded-3xl shadow-xl hover:shadow-2xl transition-all duration-300 flex-1 flex flex-col overflow-hidden">
+        <div class="p-8">
+          <h3 class="text-2xl font-bold mb-2">Basic</h3>
+          <p class="text-4xl font-bold mb-6">$29<span class="text-xl font-normal">/month</span></p>
+          <ul class="mb-8 space-y-4">
+            <li class="flex items-center">
+              <svg class="w-5 h-5 mr-3 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+              </svg>
+              50,000 words/month
+            </li>
+            <li class="flex items-center">
+              <svg class="w-5 h-5 mr-3 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+              </svg>
+              5 AI models
+            </li>
+            <li class="flex items-center">
+              <svg class="w-5 h-5 mr-3 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+              </svg>
+              Email support
+            </li>
+            <li class="flex items-center">
+              <svg class="w-5 h-5 mr-3 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+              </svg>
+              1 user
+            </li>
+          </ul>
+        </div>
+        <div class="p-8 bg-gray-50 mt-auto">
+          <button class="w-full py-3 px-6 rounded-full font-semibold transition-all duration-300 bg-gradient-to-r from-purple-600 to-blue-500 text-white hover:shadow-lg">
+            Get Started
+          </button>
+        </div>
+      </div>
+
+      <div class="bg-white rounded-3xl shadow-xl hover:shadow-2xl transition-all duration-300 flex-1 flex flex-col overflow-hidden lg:-mt-8">
+        <div class="p-8 bg-gradient-to-br from-purple-600 to-blue-500 text-white">
+          <h3 class="text-2xl font-bold mb-2">Pro</h3>
+          <p class="text-4xl font-bold mb-6">$79<span class="text-xl font-normal">/month</span></p>
+          <ul class="mb-8 space-y-4">
+            <li class="flex items-center">
+              <svg class="w-5 h-5 mr-3 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+              </svg>
+              250,000 words/month
+            </li>
+            <li class="flex items-center">
+              <svg class="w-5 h-5 mr-3 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+              </svg>
+              All AI models
+            </li>
+            <li class="flex items-center">
+              <svg class="w-5 h-5 mr-3 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+              </svg>
+              Priority support
+            </li>
+            <li class="flex items-center">
+              <svg class="w-5 h-5 mr-3 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+              </svg>
+              3 users
+            </li>
+            <li class="flex items-center">
+              <svg class="w-5 h-5 mr-3 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+              </svg>
+              API access
+            </li>
+          </ul>
+        </div>
+        <div class="p-8 bg-gray-50 mt-auto">
+          <button class="w-full py-3 px-6 rounded-full font-semibold transition-all duration-300 bg-white text-purple-600 hover:bg-gray-100">
+            Get Started
+          </button>
+        </div>
+      </div>
+
+      <div class="bg-white rounded-3xl shadow-xl hover:shadow-2xl transition-all duration-300 flex-1 flex flex-col overflow-hidden">
+        <div class="p-8">
+          <h3 class="text-2xl font-bold mb-2">Enterprise</h3>
+          <p class="text-4xl font-bold mb-6">Custom<span class="text-xl font-normal">/month</span></p>
+          <ul class="mb-8 space-y-4">
+            <li class="flex items-center">
+              <svg class="w-5 h-5 mr-3 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+              </svg>
+              Unlimited words
+            </li>
+            <li class="flex items-center">
+              <svg class="w-5 h-5 mr-3 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+              </svg>
+              Custom AI models
+            </li>
+            <li class="flex items-center">
+              <svg class="w-5 h-5 mr-3 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+              </svg>
+              24/7 support
+            </li>
+            <li class="flex items-center">
+              <svg class="w-5 h-5 mr-3 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+              </svg>
+              Unlimited users
+            </li>
+            <li class="flex items-center">
+              <svg class="w-5 h-5 mr-3 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+              </svg>
+              Dedicated account manager
+            </li>
+          </ul>
+        </div>
+        <div class="p-8 bg-gray-50 mt-auto">
+          <button class="w-full py-3 px-6 rounded-full font-semibold transition-all duration-300 bg-gradient-to-r from-purple-600 to-blue-500 text-white hover:shadow-lg">
+            Contact Sales
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>        
+
         <!-- Add more sections here: Features, Use Cases, Demo, Testimonials, Pricing, CTA -->
 
     </main>
