--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Opus AI Landing Page</title>
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    
 </head>
 <body class="font-sans bg-gradient-to-br from-gray-50 to-gray-100 min-h-screen">
     <header class="bg-white bg-opacity-70 backdrop-filter backdrop-blur-lg fixed w-full z-10">
